# sentry-tool

./: .coverage  .env.template  .gitignore  CONTRIBUTING.md  README.md  config.example.toml  pyproject.toml
src/sentry_tool/: __about__.py  __init__.py  cli.py  client.py  config.py  exceptions.py  monitoring.py  output.py  services.py  utils.py
src/sentry_tool/commands/: __init__.py  config.py  events.py  issues.py  projects.py  traces.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_monitoring.py  test_spans.py  test_traces.py
